Updated changelog for 0.93

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,4 @@
-2010-XX-YY Version 0.93 UNRELEASED
+2010-03-18 Version 0.93
  * Increase number of tweets shown to 50 in homeline, 40 in user view.
  * Separate user profile and user's tweets into tabs in the user view.
 
