--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+2014-04-13 Version 0.97
+ * Use HTTPS.
+
 2013-03-17 Version 0.96
  * Also access api.twitter.com for OAuth handshake.
  * Fix URL of follow/unfollow methods.
